# gui-base

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
example/: CMakeLists.txt
example/src/: GuiExample.cpp  GuiExample.h  example.cpp
lib/: CMakeLists.txt
lib/src/GuiBase/: App.cpp  App.h  Entrypoint.h  Layer.h  Logger.cpp  Logger.h
